# term

./: .clang-format  .gitignore  CMakeLists.txt  gen.py  parser.c  parser.h  state-new.txt  state.txt  vt220+col
include/sterm/: ctrl.h  psf.h  sterm.h  types.h
src/: framebuf.c  main.c  printx.c  psf.c  sterm.c  vt220.c
